init page setup

--- a/index.html
+++ b/index.html
@@ -1,8 +1,153 @@
 <html>
 
+<head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-    <h1>Test</h1>
-    <button onclick="location.href='./Keuken.html'" type="button">www.example.com</button>
+
+    <img src="Escape_game.jpg" id="bg" alt="">
+    
+    <div class="d-flex justify-content-center align-items-center" style="height:500px;">
+        <div class="centered">
+            <div class="row">
+                <h1>De speelberg escape game</h1>
+                </br>
+                </br>
+                </br>
+                </br>
+                </br>
+
+            </div>
+            <div class="row justify-content-center align-items-center">
+                <div class="col mr-5 justify-content-center align-items-center">
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Philippe</button>
+                    </div>
+                    </br>
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Yasmine</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Kiara</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Zoë</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Joppe</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Margot</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Lenny</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Liesl</button>
+                    </div>
+
+                </div>
+                <div class="col">
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Davey</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Marec</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Elise</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Laura</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Kejll</button>
+                    </div>
+                    </br>
+
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Mathias</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Kimberly</button>
+                    </div>
+                    </br>
+
+                    <div class="row justify-content-center align-items-center">
+                        <button class="btn btn-outline-primary"
+                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+                            type="button">Matthijs</button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
+        integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
