--- a/Leidingskot.html
+++ b/Leidingskot.html
@@ -7,11 +7,9 @@
 </head>
 
 <body onload="test()">
-    <div style="left: 10%;top: 20%; position: fixed;" id="div" hidden="false">
-        <p unselectable="on" onselectstart="return false">I</p>
-    </div>
+  
     <div style="left: 10%;top: 20%; position: fixed;">
-        <p unselectable="on" onselectstart="return false">I</p>
+        <p unselectable="on" onselectstart="return false">IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII</p>
     </div>
     <div style="left: 10%;top: 20%; position: fixed;">
         <p unselectable="on" onselectstart="return false">I</p>
