--- a/Douches1.html
+++ b/Douches1.html
@@ -7,16 +7,11 @@
 </head>
 
 <body onload="hide()">
-    <video height="100%" controls>
-        <source src="Morse code.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-      </video>
 
+    <img src="Backgrounds/Douches.jpg" id="bgop" alt="">
 
-    <input type="text" id="input" name="input">
-    <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
-    <p id="Resultaat">De juiste link</p>
-    <p id="Fout">Fout</p>
+    <button class=" btn btn-outline-primary" type="button">test</button>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
