--- a/Douches2.html
+++ b/Douches2.html
@@ -7,15 +7,9 @@
 </head>
 
 <body onload="hide()">
-    <audio controls>
-        <source src="Morse.wav" type="audio/mpeg">
-      Your browser does not support the audio element.
-      </audio>
+    <img src="Backgrounds/Douches.jpg" id="filledbg" alt="">
 
-    <input type="text" id="input" name="input">
     <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
-    <p id="Resultaat">De juiste link</p>
-    <p id="Fout">Fout</p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
@@ -24,27 +18,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
         integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
         crossorigin="anonymous"></script>
-
-    <script>
-        function hide() {
-            $("#Resultaat").hide()
-            $("#Fout").hide()
-
-        }
-
-        function testInput() {
-            if ($("#input").val() === "A4" || $("#input").val() === "a4") {
-                $("#Resultaat").show()
-                $("#Fout").hide()
-            }
-            else {
-                $("#Fout").show()
-            }
-        }
-
-
-
-    </script>
 </body>
 
 </html>
