--- a/Winkel1.html
+++ b/Winkel1.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onload="test()">
-    <img src="Waldo1.jpg" id="bg" alt="">
+    <img src="Images/Waldo1.jpg" id="bg" alt="">
     <input type="text" id="input" name="input">
     <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
 
