--- a/Winkel2.html
+++ b/Winkel2.html
@@ -7,7 +7,7 @@
 </head>
 
 <body onload="hide()">
-    <img src="Waldo2.jpeg" id="bg" alt="">
+    <img src="Images/Waldo2.jpeg" id="bg" alt="">
 
     <input type="text" id="input" name="input">
     <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
