--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
 
-    <img src="Escape_game.jpg" id="bgop" alt="">
+    <img src="Images/Escape_game.jpg" id="bgop" alt="">
     
     <div class="d-flex justify-content-center align-items-center" style="height:500px;">
         <div class="centered">
