--- a/Stap1/Keuken.html
+++ b/Stap1/Keuken.html
@@ -3,16 +3,18 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
 
-    <img src="Backgrounds/Keuken.jpg" id="filledbg" alt="">
-
     <button class="btn btn-outline-primary"
-        onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
-        type="button">Kimberly</button>
+    onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Keuken.html`"
+    type="button">Kimberly</button>
+    <img src="../Backgrounds/Keuken.jpg" id="filledbg" alt="">
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
