--- a/Stap3/Buiten.html
+++ b/Stap3/Buiten.html
@@ -3,12 +3,26 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
-<body>
+<body onload="hide()">
     <img src="../Backgrounds/Buiten.jpg" id="filledbg" alt="">
-    <button type="button">Keuken</button>
+    <div class="centered">
+
+        <input type="text" id="input" name="input">
+        <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
+    
+
+        <div id='Resultaat'>
+            <iframe class='' width="100%" height="450" frameborder="0" style="border:0"
+                src="https://www.google.com/maps/embed/v1/streetview?location=50.8762,3.3389&key=AIzaSyCXD68LOKwRELXXwl95GuYSgD-f-ZblO-A"
+                allowfullscreen></iframe>
+            <p class='' style="background-color: white;">Kom uit de het speeplein; rechtdoor; rechtdoor; links; rechts;
+                links; rechts; rechts; links; rechtdoor; rechtdoor; rechtdoor; rechts; </p>
+        </div>
+        <p id="Fout">Fout</p>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
@@ -17,6 +31,25 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
         integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
         crossorigin="anonymous"></script>
+
+    <script>
+        function hide() {
+            $("#Resultaat").hide()
+            $("#Fout").hide()
+
+        }
+
+        function testInput() {
+            if ($("#input").val() === "A4" || $("#input").val() === "a4") {
+                $("#Resultaat").show()
+                $("#Fout").hide()
+                $("#input").hide()
+            }
+            else {
+                $("#Fout").show()
+            }
+        }
+    </script>
 </body>
 
 </html>
