--- a/Stap1/Douches2_1.html
+++ b/Stap1/Douches2_1.html
@@ -3,14 +3,14 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body onload="hide()">
-    <img src="Backgrounds/Douches.jpg" id="filledbg" alt="">
+    <img src="../Backgrounds/Douches.jpg" id="filledbg" alt="">
 
     <audio controls>
-        <source src="Morse.wav" type="audio/mpeg">
+        <source src="../Morse.wav" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
 
