--- a/Stap1/Winkel1.html
+++ b/Stap1/Winkel1.html
@@ -3,11 +3,11 @@
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body onload="test()">
-    <img src="Images/Waldo1.jpg" id="bg" alt="">
+    <img src="../Images/Waldo1.jpg" id="bg" alt="">
     <input type="text" id="input" name="input">
     <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
 
@@ -38,9 +38,6 @@
                 $("#Fout").show()
             }
         }
-
-
-
     </script>
 </body>
 
