--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col mr-5 justify-content-center align-items-center">
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Leidingskot.html`"
+                            onclick="location.href=`./Stap0/Spel.html?user=Philippe`"
                             type="button">Philippe</button>
                     </div>
                     </br>
