--- a/index.html
+++ b/index.html
@@ -25,114 +25,86 @@
                 <div class="col mr-5 justify-content-center align-items-center">
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`./Stap0/Spel.html?user=Philippe`"
-                            type="button">Philippe</button>
-                    </div>
-                    </br>
-                    <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Keuken.html`"
-                            type="button">Yasmine</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Philippe`" type="button">Philippe</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Douches1.html`"
-                            type="button">Kiara</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Kiara`" type="button">Elise</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap2/Doches2.html`"
-                            type="button">Zoë</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Zoe`" type="button">Zoë</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Leidingskot.html`"
-                            type="button">Joppe</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Joppe`" type="button">Joppe</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Lokaal1.html`"
-                            type="button">Margot</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Margot`" type="button">Margot</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Lokaal2.html`"
-                            type="button">Lenny</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Lenny`" type="button">Lenny</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Lokaal3.html`"
-                            type="button">Liesl</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Liesl`" type="button">Liesl</button>
                     </div>
 
                 </div>
                 <div class="col">
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/WCs.html`"
-                            type="button">Davey</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Davey`" type="button">Davey</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Winkel1.html`"
-                            type="button">Marec</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Marec`" type="button">Marec</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Winkel2.html`"
-                            type="button">Elise</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Elise`" type="button">Kiara</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Leidingskot.html`"
-                            type="button">Laura</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Laura`" type="button">Laura</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Stap1/Keuken.html`"
-                            type="button">Kejll</button>
-                    </div>
-                    </br>
-
-
-                    <div class="row justify-content-center align-items-center">
-                        <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/WCs.html`"
-                            type="button">Mathias</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Kejll`" type="button">Kejll</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Lokaal1.html`"
-                            type="button">Kimberly</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Mathias`" type="button">Mathias</button>
                     </div>
                     </br>
 
                     <div class="row justify-content-center align-items-center">
                         <button class="btn btn-outline-primary"
-                            onclick="location.href=`https://matthijssoetaert.github.io/SpeelpleinEscapeRoom/Lokaal2.html`"
-                            type="button">Matthijs</button>
+                            onclick="location.href=`./Stap0/Spel.html?user=Kimberly`" type="button">Kimberly</button>
                     </div>
                 </div>
             </div>
