--- a/Stap1/Winkel2_1.html
+++ b/Stap1/Winkel2_1.html
@@ -8,11 +8,18 @@
 
 <body onload="hide()">
     <img src="../Images/Waldo2.jpeg" id="bg" alt="">
+    <h3>Waartussen bevind het hoofd van Wally zich op deze figuur?</h3>
 
     <input type="text" id="input" name="input">
     <button class=" btn btn-outline-primary" onclick="testInput()" type="button">test</button>
 
-    <p id="Resultaat">De juiste link</p>
+    <div id="Resultaat">
+        <a id='meetLink'>Ga in deze google meet voor volgende ronde</a>
+        </br>
+        <a id='../Stap1/Keuken.html'>Speel verder op deze link</a>
+        </br>
+        <a href="../Stap1/Winkel1_1.html">Help je teamgenoot om in de volgende ronde te raken via</a>
+    </div>
     <p id="Fout">Fout</p>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -27,11 +34,10 @@
         function hide() {
             $("#Resultaat").hide()
             $("#Fout").hide()
-
         }
 
         function testInput() {
-            if ($("#input").val() === "A4" || $("#input").val() === "a4") {
+            if ($("#input").val() === "been" || $("#input").val() === "benen") {
                 $("#Resultaat").show()
                 $("#Fout").hide()
             }
